my-test/testsuite_scan/ir/SingleSource/UnitTests/2008-04-20-LoopBug2.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/2008-04-20-LoopBug2.c:11:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   11 | main() {
      | ^
      | int
1 error generated.
